# calculadora_titulos_publicos

./: .gitignore  AUDITORIA_COMPLETA.md  CONSOLIDACAO_FINAL.md  DIAGNOSTICO_ARQUITETURA.md  DOCS_CODEBASE.md  MANIFEST.in  MELHORIAS_APLICADAS.md  PROGRESSO_REFATORACAO.md  README.md  RESUMO_REFATORACAO.md  RUNBOOK.md  pyproject.toml  requirements.txt  requirements_dash.txt  run_api.py  run_dash_app.py  setup.py  streamlit_app.py  test_vencimentos_api.py  testar.ipynb  testar_sistema.py
Testes/: hist.ipynb  teste_bmf.ipynb  teste_implicita.ipynb  teste_ltn.ipynb  teste_ntnf.ipynb  testes.ipynb
api/: __init__.py  logging_config.py  main.py  models.py  utils.py
api/middleware/: __init__.py  metrics.py
api/routers/: __init__.py  carteiras.py  equivalencia.py  lft.py  ltn.py  ntnb.py  ntnf.py  vencimentos.py
dash_app/: __init__.py  app.py  config.py
dash_app/components/: __init__.py  navbar.py
dash_app/pages/: __init__.py  home.py  lft.py  ltn.py  ntnb.py  ntnb_hedge.py  ntnf.py
dash_app/utils/: __init__.py  api.py  carteiras.py  formatacao.py  vencimentos.py
explain/: 00_project_summary.md  01_modules_map.md  02_execution_flow.md  03_functions_index.md  04_assumptions_and_risks.md
streamlit_app/: __init__.py  app.py  config.py
streamlit_app/components/: __init__.py  sidebar.py
streamlit_app/pages/: __init__.py  home.py  lft.py  ltn.py  ntnb.py  ntnf.py
streamlit_app/utils/: __init__.py  api.py
tests/: README.md  __init__.py  conftest.py  test_api.py  test_dash.py  test_titulospub_calculos.py
tests/regression/: README.md  __init__.py  conftest.py  test_equivalencia.py  test_titulos.py  test_vencimentos.py
titulospub/: __init__.py
titulospub/core/: __init__.py  auxilio.py  equivalencia.py
titulospub/core/carteiras/: __init__.py  carteira_lft.py  carteira_ltn.py  carteira_ntnb.py  carteira_ntnf.py
titulospub/core/dap/: calculo_dap.py  dap.ipynb
titulospub/core/di/: calculo_di.py  di_contrato.py
titulospub/core/lft/: ajuste_vna_lft.py  calculo_lft.py  titulo_lft.py
titulospub/core/ltn/: calculo_ltn.py  titulo_ltn.py
titulospub/core/ntnb/: calculo_ntnb.py  cash_flow_ntnb.py  titulo_ntnb.py  vna_ntnb.py
titulospub/core/ntnf/: calculo_ntnf.py  cash_flow_ntnf.py  titulo_ntnf.py
titulospub/dados/: __init__.py  acesso_backup.ipynb  anbimas.py  backup.py  bmf.py  cache.py  ipca.py  orquestrador.py  vencimentos.py
titulospub/dados/backup_excel/: anbimas.xlsx  bmf.xlsx  feriados.xlsx  ipca_fechado.xlsx  ipca_proj.xlsx
titulospub/dados/cache_data/: anbimas.pkl  bmf.pkl  cdi.pkl  feriados.pkl  ipca_dict.pkl  vna_lft.pkl
titulospub/scraping/: __init__.py  anbima_scraping.py  bmf_net_scraping.py  sidra_scraping.py  uptodata_scraping.py
titulospub/titulospub/dados/: backup.py  orquestrador.py
titulospub/titulospub/scraping/: anbima_scraping.py  sidra_scraping.py
titulospub/utils/: __init__.py  carregamento_var_globais.py  datas.py  paths.py
(+8 files in other folders)
