[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "titulospub"
version = "1.0.0"
description = "Sistema completo para cálculo e análise de títulos públicos brasileiros"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Sistema de Cálculo de Títulos Públicos"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.20.0",
    "requests>=2.25.0",
    "openpyxl>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[tool.setuptools]
packages = ["titulospub"]

[tool.setuptools.package-data]
titulospub = ["**/*.py"]

# Configuração de formatação (Black)
[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Excluir arquivos de cache e backup
  \.git
  | \.venv
  | venv
  | __pycache__
  | \.pytest_cache
)/
'''

# Configuração de organização de imports (isort)
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/venv/*", "*/__pycache__/*", "*/.pytest_cache/*"]








